# sphinx-ext-sparql

./: .gitignore  README.rst  default.nix  flake.nix  pyoxigraph.nix  pyproject.toml
doc/source/: ask_tutorial.rq  conf.py  example.ttl  index.rst  list_sub_obj.rq  list_titles.rq
sphinx_ext_sparql/: __init__.py
sphinx_sparql/: __init__.py
tests/source/: conf.py  example.ttl  index.rst  list_sub_obj.rq
