[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-sparql"
description = "Sphinx Extension for performing SPARQL queries"
version = "0.0.1"
dependencies = [
    "sphinx",
    "pyoxigraph",
]
optional-dependencies.test = [
    "black",
    "pytest",
    "pytest-cov[all]",
    "pylint",
]
requires-python = ">=3.8"
authors = [
    { name = "Tim Schubert", email = "tim.schubert@dlr.de" },
]
maintainers = [
    { name = "Tim Schubert", email = "tim.schubert@dlr.de" },
]
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
]
keywords = ["sparql", "rdf", "sphinx", "documentation"]


[project.urls]
Homepage = "https://dlr.de/ft/ssy"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#"Bug Tracker" = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.pylsp.plugins.ruff]
enabled = true
